# fmi_trollflow2_plugins

./: .bandit  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
continuous_integration/: environment.yaml
examples/: li-lfl-postgis.yaml
fmi_trollflow2_plugins/: __init__.py  points2postgis.py
fmi_trollflow2_plugins/tests/: test_points2postgis.py
fmi_trollflow2_plugins/tests/etc/: trollflow2_points2postgis_euro4.yaml  trollflow2_points2postgis_hrw.yaml  trollflow2_points2postgis_li_area_euro4.yaml  trollflow2_points2postgis_none.yaml
